fix: align ListingDetailHeader with detroit updates

--- a/src/page_components/listing/ListingDetailHeader.scss
+++ b/src/page_components/listing/ListingDetailHeader.scss
@@ -90,7 +90,7 @@
 }
 
 .detail-header__subtitle {
-  @apply text-tiny;
+  font-size: var(--bloom-font-size-sm);
 
   @screen md {
     @apply text-gray-800;
